--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -82,6 +82,7 @@ add_subdirectory(sound)
 add_subdirectory(third_party)
 add_subdirectory(ui_basic)
 add_subdirectory(ui_fsmenu)
+add_subdirectory(utils)
 if (OPTION_BUILD_WEBSITE_TOOLS)
   add_subdirectory(website)
 endif (OPTION_BUILD_WEBSITE_TOOLS)
