--- a/src/scripting/CMakeLists.txt
+++ b/src/scripting/CMakeLists.txt
@@ -123,6 +123,7 @@ wl_library(scripting_logic
     logic_game_controller
     logic_widelands_geometry
     map_io
+    profile
     scripting_base
     scripting_coroutine
     scripting_errors
