Pulled out new library wui_interactive_base. Removed unused enum PlayerType.

--- a/src/editor/CMakeLists.txt
+++ b/src/editor/CMakeLists.txt
@@ -111,5 +111,6 @@ wl_library(editor
     wui
     wui_common
     wui_field_overlay_manager
+    wui_interactive_base
     wui_mapview_pixelfunctions
 )
