--- a/src/graphic/CMakeLists.txt
+++ b/src/graphic/CMakeLists.txt
@@ -205,9 +205,9 @@ wl_library(graphic_game_renderer
     graphic_surface
     graphic_terrain_programs
     logic
-    wui
     wui_edge_overlay_manager
     wui_field_overlay_manager
+    wui_interactive_base
     wui_mapview_pixelfunctions
 )
 
